--- a/learn-m365-pr/m365-developer/sharepoint-spfx-teams-dev/6-tab-configuration.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-teams-dev/6-tab-configuration.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.sharepoint-spfx-teams-dev.6-tab-configuration
 metadata:
   title: Client-side Web part settings in Microsoft Teams tabs
-  description: In this unit, you'll learn how to configure your SharePoint Framework client-side web part's settings when its used as a tab in Microsoft Teams.
-  ms.date: 03/07/2022
+  description: In this unit, you'll learn how to configure your SharePoint Framework client-side web part's settings when it's used as a tab in Microsoft Teams.
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
