Fixed Build issues

--- a/learn-m365-pr/m365/roll-out-microsoft-surface-devices/index.yml
+++ b/learn-m365-pr/m365/roll-out-microsoft-surface-devices/index.yml
@@ -6,7 +6,7 @@ metadata:
   description: In this module, you'll explore the features of both the Microsoft 365 admin center and Microsoft Endpoint Manager. You'll follow the journey of a Surface device and see how to use Intune and Windows Autopilot to improve the out-of-box experience for your employees.
   ms.date: 05/06/2022
   author: temanteleary
-  ms.author: temanteleary
+  ms.author: teleary
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Roll out Microsoft Surface devices
