--- a/learn-m365-pr/m365/roll-out-microsoft-surface-devices/summary.yml
+++ b/learn-m365-pr/m365/roll-out-microsoft-surface-devices/summary.yml
@@ -7,7 +7,7 @@ metadata:
   description: ""
   ms.date: 05/06/2022
   author: temanteleary
-  ms.author: temanteleary
+  ms.author: teleary
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 1
