--- a/learn-m365-pr/m365/create-device-configuration-profiles/index.yml
+++ b/learn-m365-pr/m365/create-device-configuration-profiles/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.author: erikre
   ms.topic: interactive-tutorial
 title: Create device configuration profiles using Microsoft Endpoint Manager
-summary: Microsoft Endpoint Manager helps you protect devices that the people at your organization use to be productive. By completing this module, you will understand the capabilities of device configuration profiles available in Microsoft Endpoint Manager. In addition, you will create a new configuration profile and assign it to a group of users.
+summary: Microsoft Endpoint Manager helps you protect devices that the people at your organization use to be productive. By completing this module, you will understand the capabilities of device configuration profiles available in Microsoft Endpoint Manager. In addition, you will create new configuration profiles.
 abstract: | 
   In this module, you will:
     - Learn about device configuration concepts
-    - Create and assign a new device configuration profile
+    - Create and assign new device configuration profiles
     - View the device configuration profile
-    - Understand the basic, enhanced, and complex device configuration profiles 
+    - Understand fundamental, protective, and comprehensive device configuration profiles 
 prerequisites: | 
   - Basic knowledge of Microsoft Endpoint Manager and endpoint management concepts, see [Microsoft Endpoint Manager fundamentals](/learn/paths/endpoint-manager-fundamentals?azure-portal=true).
   - Understand your endpoint management objectives, device inventory considerations, licensing needs, infrastructure objectives, and rollout plans, see [Determine your endpoint management implementation](/learn/modules/determine-endpoint-implementation?azure-portal=true).
