--- a/learn-m365-pr/m365/m365-compliance-information-prevent-data-loss/summary.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-prevent-data-loss/summary.yml
@@ -3,7 +3,7 @@ uid: learn-m365.m365-compliance-information-prevent-data-loss.summary
 title: Summary
 metadata:
   title: Summary
-  description: Review what you've learned about data loss prevention in Microsoft 365. 
+  description: Review what you've learned about data loss prevention in Microsoft Purview. 
   ms.date: 07/07/2021
   author: beccarobins
   ms.author: beccarobins
