--- a/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Module
 uid: learn-m365.m365-compliance-information-governance
 metadata:
-  title: Introduction to information protection and governance in Microsoft 365
-  description: Learn how Microsoft 365 information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
+  title: Introduction to information protection and governance in Microsoft Purview
+  description: Learn how Microsoft Purview information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
   ms.date: 02/25/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
   ms.custom: intro-internal
-title: Introduction to information protection and governance in Microsoft 365
+title: Introduction to information protection and governance in Microsoft Purview
 summary: Learn how Microsoft 365 information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
 abstract: |
   Upon completion of this module, you should be able to: 
-  - Discuss information protection and governance and why it’s important.
-  - Describe Microsoft’s approach to information protection and governance.
-  - Define key terms associated with Microsoft’s information protection and governance solutions.
+  - Discuss information protection and governance and why it's important.
+  - Describe Microsoft's approach to information protection and governance.
+  - Define key terms associated with Microsoft's information protection and governance solutions.
   - Identify the solutions that comprise information and governance in Microsoft 365.
 
 prerequisites: | 
