--- a/learn-m365-pr/m365/m365-compliance-information-prevent-data-loss/knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-prevent-data-loss/knowledge-check.yml
@@ -3,7 +3,7 @@ uid: learn-m365.m365-compliance-information-prevent-data-loss.knowledge-check
 title: Knowledge check
 metadata:
   title: Knowledge check
-  description: Check what you've learned about data loss prevention in Microsoft 365. 
+  description: Check what you've learned about data loss prevention in Microsoft Purview. 
   ms.date: 08/06/2021
   author: beccarobins
   ms.author: beccarobins
