--- a/learn-m365-pr/m365/m365-compliance-information-protect-information/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-protect-information/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:Module
 uid: learn-m365.m365-compliance-information-protect-information
 metadata:
-  title: Protect information in Microsoft 365
+  title: Protect information in Microsoft Purview
   description:  Learn how to detect sensitive content as it's used and shared throughout your organization, in the cloud and on devices, and help prevent accidental data loss. 
   ms.date: 02/11/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Protect information in Microsoft 365
+title: Protect information in Microsoft Purview
 summary:  Learn how to detect sensitive content as it's used and shared throughout your organization, in the cloud and on devices, and help prevent accidental data loss. 
 abstract: |
   Upon completion of this module, you should be able to: 
