--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Module
 uid: learn-m365.m365-compliance-information-govern-information
 metadata:
-  title: Govern information in Microsoft Purview
+  title: Manage the data lifecycle in Microsoft Purview
   description:  Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 10/29/2021
   author: beccarobins
