--- a/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Module
 uid: learn-m365.m365-compliance-information-governance
 metadata:
-  title: Introduction to information protection and governance in Microsoft Purview
+  title: Introduction to information protection and data lifecycle management in Microsoft Purview
   description: Learn how Microsoft Purview information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
   ms.date: 02/25/2022
   author: beccarobins
