--- a/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.prod: learning-m365
   ms.custom: intro-internal
 title: Introduction to information protection and data lifecycle management in Microsoft Purview
-summary: Learn how Microsoft 365 information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
+summary: Learn how Microsoft 365 information protection and data lifecycle management solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
 abstract: |
   Upon completion of this module, you should be able to: 
   - Discuss information protection and governance and why it's important.
