--- a/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.m365-compliance-information-governance.introduction
-title: Introduction to information and governance in Microsoft Purview
+title: Introduction to information protection and data lifecycle management
 metadata:
   title:  Introduction to information and governance in Microsoft Purview
   description: Learn how Microsoft Purview information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
