--- a/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
@@ -3,7 +3,7 @@ uid: learn-m365.m365-compliance-information-governance.introduction
 title: Introduction to information protection and data lifecycle management
 metadata:
   title:  Introduction to information protection and data lifecycle management in Microsoft Purview
-  description: Learn how Microsoft Purview information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
+  description: Learn how Microsoft Purview information protection and data lifecycle management solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
   ms.date: 02/11/2022
   author: beccarobins
   ms.author: beccarobins
