--- a/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/introduction.yml
@@ -2,7 +2,7 @@
 uid: learn-m365.m365-compliance-information-governance.introduction
 title: Introduction to information protection and data lifecycle management
 metadata:
-  title:  Introduction to information protection and data lifecycle management in Microsoft Purview
+  title:  Introduction to information protection and data lifecycle management
   description: Learn how Microsoft Purview information protection and data lifecycle management solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
   ms.date: 02/11/2022
   author: beccarobins
