Updates LOs with new product name

--- a/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/index.yml
@@ -13,10 +13,10 @@ title: Introduction to information protection and governance in Microsoft Purvie
 summary: Learn how Microsoft 365 information protection and governance solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
 abstract: |
   Upon completion of this module, you should be able to: 
-  - Discuss information protection and governance and why it's important.
-  - Describe Microsoft's approach to information protection and governance.
-  - Define key terms associated with Microsoft's information protection and governance solutions.
-  - Identify the solutions that comprise information and governance in Microsoft 365.
+  - Discuss information protection and data lifecycle management and why it's important.
+  - Describe Microsoft's approach to information protection and data lifecycle management.
+  - Define key terms associated with Microsoft's information protection and data lifecycle management solutions.
+  - Identify the solutions that comprise information and data lifecycle management in Microsoft Purview.
 
 prerequisites: | 
    - Cloud computing concepts
