--- a/learn-m365-pr/m365/audit-identity-access-management/index.yml
+++ b/learn-m365-pr/m365/audit-identity-access-management/index.yml
@@ -15,7 +15,7 @@ abstract: |
  - List two different types of accounts managed by Microsoft.
  - Name the tools and technologies used to control access within Microsoft 365 environments.
  - Explain mandatory prerequisites for granting service team accounts. 
- - Describe Microsoft 365 service teams’ privileged access management process.
+ - Describe Microsoft 365 service teams' privileged access management process.
  - Explain the process for using Microsoft Purview Customer Lockbox.
 
 prerequisites: None
