--- a/learn-m365-pr/m365/m365-teams-enterprise-compliance/5-use-ediscovery.yml
+++ b/learn-m365-pr/m365/m365-teams-enterprise-compliance/5-use-ediscovery.yml
@@ -3,7 +3,7 @@ uid: learn-m365.teams.enterprise-compliance.5-use-ediscovery
 title: Use eDiscovery
 metadata:
   title: Use eDiscovery
-  description: Learn how to use eDiscovery features in Microsoft 365 to capture information from Teams communications.
+  description: Learn how to use eDiscovery features in Microsoft Purview to capture information from Teams communications.
   ms.date: 05/02/2022
   ms.author: teleary
   author: temanteleary
