--- a/learn-m365-pr/m365/audit-identity-access-management/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/audit-identity-access-management/summary-knowledge-check.yml
@@ -49,7 +49,7 @@ quiz:
         explanation: "Correct. Service team accounts are used by individual Microsoft personnel charged with developing, maintaining, and repairing core Microsoft 365 services."
       - content: "Customer accounts"
         isCorrect: false
-        explanation: "Customer accounts are provisioned by the customer for users in the customer’s organization."
+        explanation: "Customer accounts are provisioned by the customer for users in the customer's organization."
 
     - content: "What access control tool in Microsoft requires engineers to specify the privileged role, resources, and time required to complete an administrative task as part of requesting JIT access?"
       choices:
