--- a/learn-m365-pr/m365/ransomware-identify-entry-points/summary.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/summary.yml
@@ -3,13 +3,13 @@ uid: learn-m365.ransomware-identify-entry-points.summary
 title: Summary
 metadata:
   unitType: summary
-  title: summary
-  description: "TODO: this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
-  ms.date: 4/11/2022
+  title: Summary
+  description: ""
+  ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365 # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 content: |
   [!include[](includes/summary.md)]
