--- a/learn-m365-pr/wwl/run-imap-migrations/index.yml
+++ b/learn-m365-pr/wwl/run-imap-migrations/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.run-imap-migrations
 metadata:
   title: Run IMAP migrations
   description: "Run IMAP migrations"
-  ms.date: 03/09/2022
+  ms.date: 05/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -26,6 +26,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.run-imap-migrations.introduction
 - learn.wwl.run-imap-migrations.plan-imap-migration
