--- a/learn-m365-pr/wwl/run-cutover-staged-migrations/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/run-cutover-staged-migrations/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 05/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,18 +24,18 @@ quiz:
       explanation: "This answer is correct. One of the post-configuration tasks that must be completed to finish the transition to Exchange Online and Microsoft 365 is to change the Autodiscover DNS record to point to the company's Microsoft 365 organization."
     - content: "Set up directory synchronization between Tailspin's on-premises Active Directory and Microsoft 365 using Azure AD Connect"
       isCorrect: false
-      explanation: "This answer is incorrect. This action must be completed before running the migration. Try again."
+      explanation: "This answer is incorrect. This action must be completed before running the migration."
     - content: "Ensure Tailspin's Exchange 2007 organization can be reached from Microsoft 365 using Outlook Anywhere"
       isCorrect: false
-      explanation: "This answer is incorrect. This action must be completed before running the migration because the Microsoft 365 migration service uses Outlook Anywhere to connect to the on-premises Exchange server. Try again."
+      explanation: "This answer is incorrect. This action must be completed before running the migration because the Microsoft 365 migration service uses Outlook Anywhere to connect to the on-premises Exchange server."
   - content: "Northwind Traders has finished running its staged migration. Which of the following items is a post-migration task that Northwind should complete?"
     choices:
     - content: "Update its on-premises Exchange servers to allow Outlook Anywhere communication for Microsoft 365"
       isCorrect: false
-      explanation: "This answer is incorrect. This task must be completed before running the staged migration. Try again."
+      explanation: "This answer is incorrect. This task must be completed before running the staged migration."
     - content: "Disable Unified Messaging on the mailboxes that were migrated"
       isCorrect: false
-      explanation: "This answer is incorrect. If the mailboxes being migrated are enabled for Unified Messaging, UM must be disabled on the mailboxes before the migration. UM can be enabled on the mailboxes after the migration is complete. Try again."
+      explanation: "This answer is incorrect. If the mailboxes being migrated are enabled for Unified Messaging, UM must be disabled on the mailboxes before the migration. UM can be enabled on the mailboxes after the migration is complete."
     - content: "Decommission all Exchange Servers but one"
       isCorrect: true
       explanation: "This answer is correct. Once there are no messages being sent in your source Exchange 2003 or 2007 environment, you can decommission all your servers but one. One Exchange server must be available to complete any necessary management tasks. It's recommended that you keep one Exchange server on-premises to use the Exchange Admin Center and Exchange Management Shell to manage your users, groups, and contacts. Having one Exchange Server available is necessary because you can't manage all user attributes in Exchange Online after enabling directory synchronization."
@@ -43,10 +43,10 @@ quiz:
     choices:
     - content: "Prepare the on-premises Exchange Servers to allow Outlook Anywhere communication for Microsoft 365"
       isCorrect: false
-      explanation: "This answer is incorrect. This task must be completed by the organization. The migration wizard won't complete this step. Try again."
+      explanation: "This answer is incorrect. This task must be completed by the organization. The migration wizard won't complete this step."
     - content: "Create a migration endpoint in Microsoft 365 that connects to the source email system"
       isCorrect: true
       explanation: "This answer is correct. As a preparatory task, an organization can create a migration endpoint in Microsoft 365 that connects to its source email system. If it doesn't create a migration endpoint, the migration wizard will create one when it creates a migration batch."
     - content: "Change the Autodiscover DNS record for all its SMTP domains"
       isCorrect: false
-      explanation: "This answer is incorrect. This task must be completed by the organization. The migration wizard won't complete this step. Try again."
+      explanation: "This answer is incorrect. This task must be completed by the organization. The migration wizard won't complete this step."
